# loopclosure

./: .gitattributes  .gitignore  README.md  dbverions  guide.md  mkdirs.sh  output_graph.pb  pretrained_places_2.pb  setup.sh  test.xml  timings.txt
download/: cnn.sh  tum.sh
graphs/contrast/: Lip6Indoor_cnn.csv  Lip6Indoor_cnn_descriptors.yaml  Lip6Indoor_cnn_nopitts.csv  Lip6Indoor_cnn_nopitts_descriptors.yaml  Lip6Indoor_low_margin.csv  Lip6Indoor_simple.csv  Lip6Outdoor_cnn.csv  Lip6Outdoor_cnn.xml  Lip6Outdoor_cnn_descriptors.yaml  Lip6Outdoor_cnn_nopitts.csv  Lip6Outdoor_low_margin.xml  (+1 more)
models/: contrast.py  deep.py  finetune_contrast.py  frozen.py  frozen_contrast.py  frozenv2.py  mobilenet_v1.py  model_util.py  places.py  places_alexnet.py  places_alexnet_data.npy  places_alexnet_model.py
rgbd/: CMakeLists.txt  README.md
rgbd/src/: main.cpp  processing.cpp  processing.h  scenenn.cpp  scenenn.h  scenenn_dataset.h  tum.cpp  tum.h  util.cpp  util.h
src/: CNNDB.py  DB.py  FlipDB.py  GTADB.py  MixedRetriever.py  NamedDB.py  PlacesDB.py  Retriever.py  SimpleDB.py  SplitDB.py  StreetViewDB.py  WithinPanoDB.py  bottlenecks.py  calc.py  calc_image_stats.py  cnn.py  constants.py  eval_util.py  gen.py  gen_negative_set.py  image_util.py  loadModel.py  load_dbs.py  names.py  negative_dbs.py  pitts.py  positive_dbs.py  scenenn.py  setup_queue.py  split.py  t27.py  test_lipdataset.py  train.py  train_all.sh  ttm.py  util.py  view_dbs.py
stats/: cnn_mean.npy  cnn_std.npy  gta_cnn_mean.npy  gta_cnn_std.npy  gta_mean.npy  gta_std.npy  simple_mean.npy  simple_std.npy
(+74 files in other folders)
